syntax = "proto3";

option java_package="com.newrelic.infra.metrics.publish.rpc.messages";
option java_outer_classname="RpcMessages";

option go_package ="rpc";

enum SourceType {
	GAUGE = 0;
	ATTRIBUTE = 1;
	RATE = 2;
	DELTA = 3;
}

message MetricData {
	string metric_name = 1;
	
	oneof metric_value {
		bool boolean_value = 3;
		int32 int_value = 4;
		int64 long_value = 5;
		double double_value = 6;
		float float_value = 7;
		string string_value = 8;
	}
		
	SourceType source_type = 9;
}

message MetricRequest {
	map<string, string> args = 1;
}
	
message MetricResponse {
	string metric_set_name = 1;
	repeated MetricData metric_set = 2;	
}

message InventoryRequest {
	map<string, string> args = 1;
}
	
message InventoryResponse {
	string inventory_name = 1;
	map<string, string> inventory = 2;
}

service PluginService {
	rpc GetMetrics (MetricRequest) returns (stream MetricResponse);
	rpc GetInventory (InventoryRequest) returns (stream InventoryResponse);
}
